--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -23,7 +23,7 @@ jobs:
         run: yarn run build
 
       - uses: crazy-max/ghaction-github-pages@v2.2.0
-        if: github.ref == 'refs/heads/master'
+        if: github.ref == 'refs/heads/main'
         with:
           build_dir: dist
         env:
