--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,7 @@
 <filesMatch ".(css|jpg|jpeg|png|gif|js|ico)$">
     Header set Cache-Control "max-age=31536000, public"
 </filesMatch>
+
+RewriteRule ^opening$ opening.html [L]
+RewriteRule ^lustrumweek$ lustrumweek.html [L]
+RewriteRule ^thema$ thema.html [L]
