--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Install vue cli
-        run: yarn global add @vue/cli
+        run: yarn global add @vue/cli@next
       
       - name: set NODE_OPTIONS
         run: export NODE_OPTIONS=--openssl-legacy-provider  
