--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -14,16 +14,13 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Install vue cli
-        run: yarn global add @vue/cli@next
-      
-      - name: set NODE_OPTIONS
-        run: export NODE_OPTIONS=--openssl-legacy-provider  
+        run: yarn global add @vue/cli
       
       - name: Install yarn dependencies
-        run: yarn install
+        run: export NODE_OPTIONS=--openssl-legacy-provider && yarn install
         
       - name: Run build
-        run: yarn run build
+        run: export NODE_OPTIONS=--openssl-legacy-provider && yarn run build
 
       - uses: crazy-max/ghaction-github-pages@v2.2.0
         if: github.ref == 'refs/heads/main'
