--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -17,10 +17,10 @@ jobs:
         run: yarn global add @vue/cli
       
       - name: Install yarn dependencies
-        run: export NODE_OPTIONS=--openssl-legacy-provider && yarn install --ignore-engines
+        run: yarn install --ignore-engines
         
       - name: Run build
-        run: export NODE_OPTIONS=--openssl-legacy-provider && yarn run build
+        run: yarn run build
 
       - uses: crazy-max/ghaction-github-pages@v2.2.0
         if: github.ref == 'refs/heads/main'
