--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -17,7 +17,7 @@ jobs:
         run: yarn global add @vue/cli
       
       - name: Install yarn dependencies
-        run: yarn install --ignore-engines
+        run: export CXXFLAGS="--std=c++17" && yarn install --ignore-engines
         
       - name: Run build
         run: yarn run build
